workable-module-connector/0.1/modules/ROOT/pages/workable-module-connector-reference.adoc
= Workable Module Connector 0.1.0-BETA Reference

== Configurations
[[Config]]
=== Config

Default configuration.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<Config_BearerAuth, Bearer Auth>>
 | The connection types to provide to this configuration. | | x
| Name a| String | The identifier of this element used to reference it in other components. |  | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before the runtime considers it eligible for expiration. This does not mean that the platform will expire the instance at the exact moment that it becomes eligible. The runtime will actually purge the instances when it sees it fit. |  | 
|===

==== Connection Types
[[Config_BearerAuth]]
===== Bearer Auth

Provides access to the Workable Module API using a bearer token.

====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| baseUri a| String | The base URI for the Workable Module API. |  | x
| token a| String | The API key token for authentication. |  | x
| TLS Configuration a| <<Tls>> | The TLS configuration for secure connections. |  | 
| Reconnection a| <<Reconnection>> | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
|===

== Supported Operations
* <<AddCandidateComment>>
* <<AddCandidateRating>>
* <<CopyCandidateToJob>>
* <<CreateCandidateForJob>>
* <<CreateCandidateInTalentPool>>
* <<DisqualifyCandidate>>
* <<GetAllCandidates>>
* <<GetCandidateActivities>>
* <<GetCandidateById>>
* <<GetCandidateOffer>>
* <<MoveCandidateToStage>>
* <<RevertCandidateDisqualification>>
* <<UpdateCandidate>>
* <<UpdateCandidateTags>>

== Operations

[[AddCandidateComment]]
=== addCandidateComment
`<workable:add-candidate-comment>`

Adds a comment to a candidate record.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. |  | x
| id a| String | Candidate identifier associated with the comment. |  | x
| body a| Any | The request body content. | #[payload] | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Target Variable a| String | Name of the variable that stores the operation output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. | #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
|===

==== Output

[%autowidth.spread]
|===
| Type | Any
| Attributes Type a| Any
|===

==== For Configurations

* <<Config>>

==== Throws

* WORKABLE:BAD_REQUEST
* WORKABLE:CLIENT_ERROR
* WORKABLE:CONNECTIVITY
* WORKABLE:FORBIDDEN
* WORKABLE:INTERNAL_SERVER_ERROR
* WORKABLE:NOT_FOUND
* WORKABLE:SECURITY
* WORKABLE:SERVER_ERROR
* WORKABLE:TIMEOUT
* WORKABLE:TOO_MANY_REQUESTS
* WORKABLE:UNAUTHORIZED
* WORKABLE:UNPROCESSABLE_ENTITY

[[AddCandidateRating]]
=== addCandidateRating
`<workable:add-candidate-rating>`

Adds a rating to a candidate record.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. |  | x
| id a| String | Candidate identifier to rate. |  | x
| body a| Any | The request body content. | #[payload] | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Target Variable a| String | Name of the variable that stores the operation output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. | #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
|===

==== Output

[%autowidth.spread]
|===
| Type | Any
| Attributes Type a| Any
|===

==== For Configurations

* <<Config>>

==== Throws

* WORKABLE:BAD_REQUEST
* WORKABLE:CLIENT_ERROR
* WORKABLE:CONNECTIVITY
* WORKABLE:FORBIDDEN
* WORKABLE:INTERNAL_SERVER_ERROR
* WORKABLE:NOT_FOUND
* WORKABLE:SECURITY
* WORKABLE:SERVER_ERROR
* WORKABLE:TIMEOUT
* WORKABLE:TOO_MANY_REQUESTS
* WORKABLE:UNAUTHORIZED
* WORKABLE:UNPROCESSABLE_ENTITY

[[CopyCandidateToJob]]
=== copyCandidateToJob
`<workable:copy-candidate-to-job>`

Copies a candidate to a different job.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. |  | x
| id a| String | Candidate identifier to copy. |  | x
| body a| Any | The request body content. | #[payload] | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Target Variable a| String | Name of the variable that stores the operation output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. | #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
|===

==== Output

[%autowidth.spread]
|===
| Type | Any
| Attributes Type a| Any
|===

==== For Configurations

* <<Config>>

==== Throws

* WORKABLE:BAD_REQUEST
* WORKABLE:CLIENT_ERROR
* WORKABLE:CONNECTIVITY
* WORKABLE:FORBIDDEN
* WORKABLE:INTERNAL_SERVER_ERROR
* WORKABLE:NOT_FOUND
* WORKABLE:SECURITY
* WORKABLE:SERVER_ERROR
* WORKABLE:TIMEOUT
* WORKABLE:TOO_MANY_REQUESTS
* WORKABLE:UNAUTHORIZED
* WORKABLE:UNPROCESSABLE_ENTITY

[[CreateCandidateForJob]]
=== createCandidateForJob
`<workable:create-candidate-for-job>`

Creates a candidate for a specific job.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required

| Configuration | String | Name of the configuration to use. |  | x
| shortcode a| String | Job shortcode that receives the candidate. |  | x
| body a| Any | The request body content. | #[payload] | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Target Variable a| String | Name of the variable that stores the operation output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. | #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
|===

==== Output

[%autowidth.spread]
|===
| Type | Any
| Attributes Type a| Any
|===

==== For Configurations

* <<Config>>

==== Throws

* WORKABLE:CLIENT_ERROR
* WORKABLE:CONNECTIVITY
* WORKABLE:FORBIDDEN
* WORKABLE:NOT_FOUND
* WORKABLE:SECURITY
* WORKABLE:SERVER_ERROR
* WORKABLE:TIMEOUT
* WORKABLE:UNAUTHORIZED
* WORKABLE:UNPROCESSABLE_ENTITY

[[CreateCandidateInTalentPool]]
=== createCandidateInTalentPool
`<workable:create-candidate-in-talent-pool>`

Creates a candidate in the talent pool.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| body a| Any | The request body content. |  #[payload] | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Target Variable a| String | Name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
|===

==== Output

[%autowidth.spread]
|===
| Type | Any
| Attributes Type a| Any
|===

==== For Configurations

* <<Config>>

==== Throws

* WORKABLE:CLIENT_ERROR
* WORKABLE:CONNECTIVITY
* WORKABLE:FORBIDDEN
* WORKABLE:SECURITY
* WORKABLE:SERVER_ERROR
* WORKABLE:TIMEOUT
* WORKABLE:UNAUTHORIZED
* WORKABLE:UNPROCESSABLE_ENTITY

[[DisqualifyCandidate]]
=== disqualifyCandidate
`<workable:disqualify-candidate>`

Disqualifies a candidate from further consideration.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. |  | x
| id a| String | Candidate identifier to disqualify. |  | x
| body a| Any | Payload that defines the disqualification details. | #[payload] | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Target Variable a| String | Name of the variable that stores the operation output. |  | 
| Target Value a| String | Expression evaluated against the operation output and stored in the target variable. | #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
|===

==== Output

[%autowidth.spread]
|===
| Type | Null
| Attributes Type a| Any
|===

==== For Configurations

* <<Config>>

==== Throws

* WORKABLE:BAD_REQUEST
* WORKABLE:CLIENT_ERROR
* WORKABLE:CONNECTIVITY
* WORKABLE:FORBIDDEN
* WORKABLE:INTERNAL_SERVER_ERROR
* WORKABLE:NOT_FOUND
* WORKABLE:SECURITY
* WORKABLE:SERVER_ERROR
* WORKABLE:TIMEOUT
* WORKABLE:TOO_MANY_REQUESTS
* WORKABLE:UNAUTHORIZED
* WORKABLE:UNPROCESSABLE_ENTITY

[[GetAllCandidates]]
=== getAllCandidates
`<workable:get-all-candidates>`

Retrieves all candidates that meet the provided filter criteria.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. |  | x
| limit a| Number | The maximum number of results to return. |  | 
| since_id a| String | Returns candidates created after the specified candidate ID. |  | 
| max_id a| String | Returns candidates created before the specified candidate ID. |  | 
| created_after a| DateTime | Returns candidates created after the specified date and time. |  | 
| updated_after a| DateTime | Returns candidates updated after the specified date and time. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Target Variable a| String | Name of the variable that stores the operation output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. | #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
|===

==== Output

[%autowidth.spread]
|===
| Type | Any
| Attributes Type a| Any
|===

==== For Configurations

* <<Config>>

==== Throws

* WORKABLE:BAD_REQUEST
* WORKABLE:CLIENT_ERROR
* WORKABLE:CONNECTIVITY
* WORKABLE:FORBIDDEN
* WORKABLE:NOT_FOUND
* WORKABLE:SECURITY
* WORKABLE:SERVER_ERROR
* WORKABLE:TIMEOUT
* WORKABLE:UNAUTHORIZED

[[GetCandidateActivities]]
=== getCandidateActivities
`<workable:get-candidate-activities>`

Retrieves activity records for a candidate.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. |  | x
| id a| String | Candidate identifier whose activities you want to retrieve. |  | x
| limit a| Number | The maximum number of results to return. |  | 
| offset a| Number | Number of activity records to skip before returning results. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Target Variable a| String | Name of the variable that stores the operation output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. | #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
|===

==== Output

[%autowidth.spread]
|===
| Type | Any
| Attributes Type a| Any
|===

==== For Configurations

* <<Config>>

==== Throws

* WORKABLE:BAD_REQUEST
* WORKABLE:CLIENT_ERROR
* WORKABLE:CONNECTIVITY
* WORKABLE:FORBIDDEN
* WORKABLE:INTERNAL_SERVER_ERROR
* WORKABLE:NOT_FOUND
* WORKABLE:SECURITY
* WORKABLE:SERVER_ERROR
* WORKABLE:TIMEOUT
* WORKABLE:TOO_MANY_REQUESTS
* WORKABLE:UNAUTHORIZED

[[GetCandidateById]]
=== getCandidateById
`<workable:get-candidate-by-id>`

Retrieves a candidate by identifier.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. |  | x
| id a| String | Candidate identifier to retrieve. |  | x
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Target Variable a| String | Name of the variable that stores the operation output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. | #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
|===

==== Output

[%autowidth.spread]
|===
| Type | Any
| Attributes Type a| Any
|===

==== For Configurations

* <<Config>>

==== Throws

* WORKABLE:BAD_REQUEST
* WORKABLE:CLIENT_ERROR
* WORKABLE:CONNECTIVITY
* WORKABLE:FORBIDDEN
* WORKABLE:NOT_FOUND
* WORKABLE:SECURITY
* WORKABLE:SERVER_ERROR
* WORKABLE:TIMEOUT
* WORKABLE:UNAUTHORIZED

[[GetCandidateOffer]]
=== getCandidateOffer
`<workable:get-candidate-offer>`

Retrieves the offer details for a candidate.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. |  | x
| id a| String | Candidate identifier whose offer you want to retrieve. |  | x
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Target Variable a| String | Name of the variable that stores the operation output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable . | #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
|===

==== Output

[%autowidth.spread]
|===
| Type | Any
| Attributes Type a| Any
|===

==== For Configurations

* <<Config>>

==== Throws

* WORKABLE:BAD_REQUEST
* WORKABLE:CLIENT_ERROR
* WORKABLE:CONNECTIVITY
* WORKABLE:FORBIDDEN
* WORKABLE:INTERNAL_SERVER_ERROR
* WORKABLE:NOT_FOUND
* WORKABLE:SECURITY
* WORKABLE:SERVER_ERROR
* WORKABLE:TIMEOUT
* WORKABLE:TOO_MANY_REQUESTS
* WORKABLE:UNAUTHORIZED

[[MoveCandidateToStage]]
=== moveCandidateToStage
`<workable:move-candidate-to-stage>`

Moves a candidate to a different recruitment stage.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. |  | x
| id a| String | Candidate identifier to move. |  | x
| body a| Any | The request body content. | #[payload] | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Target Variable a| String | Name of the variable that stores the operation output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. | #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
|===

==== Output

[%autowidth.spread]
|===
| Type | Null
| Attributes Type a| Any
|===

==== For Configurations

* <<Config>>

==== Throws

* WORKABLE:BAD_REQUEST
* WORKABLE:CLIENT_ERROR
* WORKABLE:CONNECTIVITY
* WORKABLE:FORBIDDEN
* WORKABLE:INTERNAL_SERVER_ERROR
* WORKABLE:NOT_FOUND
* WORKABLE:SECURITY
* WORKABLE:SERVER_ERROR
* WORKABLE:TIMEOUT
* WORKABLE:TOO_MANY_REQUESTS
* WORKABLE:UNAUTHORIZED
* WORKABLE:UNPROCESSABLE_ENTITY

[[RevertCandidateDisqualification]]
=== revertCandidateDisqualification
`<workable:revert-candidate-disqualification>`

Reverts a candidate disqualification.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. |  | x
| id a| String | Candidate identifier to reinstate. |  | x
| body a| Any | The request body content. | #[payload] | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Target Variable a| String | Name of the variable that stores the operation output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. | #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
|===

==== Output

[%autowidth.spread]
|===
| Type | Null
| Attributes Type a| Any
|===

==== For Configurations

* <<Config>>

==== Throws

* WORKABLE:BAD_REQUEST
* WORKABLE:CLIENT_ERROR
* WORKABLE:CONNECTIVITY
* WORKABLE:FORBIDDEN
* WORKABLE:INTERNAL_SERVER_ERROR
* WORKABLE:NOT_FOUND
* WORKABLE:SECURITY
* WORKABLE:SERVER_ERROR
* WORKABLE:TIMEOUT
* WORKABLE:TOO_MANY_REQUESTS
* WORKABLE:UNAUTHORIZED

[[UpdateCandidate]]
=== updateCandidate
`<workable:update-candidate>`

Updates candidate details.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. |  | x
| id a| String | Candidate identifier to update. |  | x
| body a| Any | The request body content. | #[payload] | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Target Variable a| String | Name of the variable that stores the operation output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. | #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
|===

==== Output

[%autowidth.spread]
|===
| Type | Any
| Attributes Type a| Any
|===

==== For Configurations

* <<Config>>

==== Throws

* WORKABLE:BAD_REQUEST
* WORKABLE:CLIENT_ERROR
* WORKABLE:CONNECTIVITY
* WORKABLE:FORBIDDEN
* WORKABLE:NOT_FOUND
* WORKABLE:SECURITY
* WORKABLE:SERVER_ERROR
* WORKABLE:TIMEOUT
* WORKABLE:UNAUTHORIZED
* WORKABLE:UNPROCESSABLE_ENTITY

[[UpdateCandidateTags]]
=== updateCandidateTags
`<workable:update-candidate-tags>`

Updates tags assigned to a candidate.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. |  | x
| id a| String | Candidate identifier whose tags you want to update. |  | x
| body a| Any | The request body content. | #[payload] | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Target Variable a| String | Name of the variable that stores the operation output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. | #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
|===

==== Output

[%autowidth.spread]
|===
| Type | Any
| Attributes Type a| Any
|===

==== For Configurations

* <<Config>>

==== Throws

* WORKABLE:BAD_REQUEST
* WORKABLE:CLIENT_ERROR
* WORKABLE:CONNECTIVITY
* WORKABLE:FORBIDDEN
* WORKABLE:INTERNAL_SERVER_ERROR
* WORKABLE:NOT_FOUND
* WORKABLE:SECURITY
* WORKABLE:SERVER_ERROR
* WORKABLE:TIMEOUT
* WORKABLE:TOO_MANY_REQUESTS
* WORKABLE:UNAUTHORIZED
* WORKABLE:UNPROCESSABLE_ENTITY

== Types
[[Tls]]
=== TLS

Configures TLS to provide secure communications for the Mule app.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma-separated list of protocols enabled for this context. |  | 
| Enabled Cipher Suites a| String | A comma-separated list of cipher suites enabled for this context. |  | 
| Trust Store a| <<TrustStore>> | Configures the TLS truststore. |  | 
| Key Store a| <<KeyStore>> | Configures the TLS keystore. |  | 
| Revocation Check a| * <<StandardRevocationCheck>>
* <<CustomOcspResponder>>
* <<CrlFile>> | Configures a revocation checking mechanism. |  | 
|===

[[TrustStore]]
=== Truststore

Configures the truststore for TLS.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the trust store. |  | 
| Password a| String | The password used to protect the trust store. |  | 
| Type a| String | The type of store used. |  | 
| Algorithm a| String | The algorithm used by the trust store. |  | 
| Insecure a| Boolean | If true, no certificate validations will be performed, rendering connections vulnerable to attacks. Use at your own risk. |  | 
|===

[[KeyStore]]
=== Keystore

Configures the keystore for the TLS protocol. The keystore you generate contains a private key and a public certificate.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the key store. |  | 
| Type a| String | The type of store used. |  | 
| Alias a| String | When the key store contains many private keys, this attribute indicates the alias of the key that should be used. If not defined, the first key in the file will be used by default. |  | 
| Key Password a| String | The password used to protect the private key. |  | 
| Password a| String | The password used to protect the key store. |  | 
| Algorithm a| String | The algorithm used by the key store. |  | 
|===

[[StandardRevocationCheck]]
=== Standard Revocation Check

Configures standard revocation checks for TLS certificates.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Specifies whether to verify only the last element in the certificate chain. |  | 
| Prefer Crls a| Boolean | Specifies whether to check the Certification Revocation List (CRL) first for certificate validity. |  | 
| No Fallback a| Boolean | Specifies whether to avoid using the secondary method to check certificate validity. |  | 
| Soft Fail a| Boolean | Specifies whether to avoid verification failure when the revocation server cannot be reached. |  | 
|===

[[CustomOcspResponder]]
=== Custom OCSP Responder

Configures a custom OCSP responder for certification revocation checks.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | The URL of the OCSP responder. |  | 
| Cert Alias a| String | Alias of the signing certificate for the OCSP response. If specified, the alias must be in the truststore. |  | 
|===

[[CrlFile]]
=== CRL File

Specifies the location of the certification revocation list (CRL) file.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the CRL file. |  | 
|===

=== Reconnection

Configures a reconnection strategy for an operation.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Reconnection strategy to use. |  | 
|===

=== Reconnect

Configures a standard reconnection strategy, which specifies how often to reconnect and how many reconnection attempts the connector source or operation can make.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | Specifies how often to attempt to reconnect, in milliseconds. |  | 
| Blocking a| Boolean | If false, the reconnection strategy will run in a separate, non-blocking thread. |  | 
| Count a| Number | Specifies how many reconnection attempts the Mule app can make. |  | 
|===

=== Reconnect Forever

Configures a forever reconnection strategy by which the connector source or operation attempts to reconnect at a specified frequency for as long as the Mule app runs.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | Specifies how often to attempt to reconnect, in milliseconds. |  | 
| Blocking a| Boolean | If false, the reconnection strategy will run in a separate, non-blocking thread. |  | 
|===

[[ExpirationPolicy]]
=== Expiration Policy

Configures an expiration policy strategy.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration. |  | 
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Max Idle Time* field. |  | 
|===

[[ErrorMapping]]
=== Error Mapping

Defines an error mapping entry.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Source a| Enumeration, one of:

** ANY
** REDELIVERY_EXHAUSTED
** TRANSFORMATION
** EXPRESSION
** SECURITY
** CLIENT_SECURITY
** SERVER_SECURITY
** ROUTING
** CONNECTIVITY
** RETRY_EXHAUSTED
** TIMEOUT | Source of the error. |  | 
| Target a| String | Target of the error. |  | x
|===

